[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/DialogueUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/RadarUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/PlayerHUD.gd" type="Script" id=3]
[ext_resource path="res://UI/TitleUITheme.tres" type="Theme" id=4]
[ext_resource path="res://UI/Font_HUD.tres" type="DynamicFont" id=5]

[node name="PlayerHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadarUI" parent="." instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -130.0
margin_top = 130.0

[node name="DialogueUI" parent="." instance=ExtResource( 1 )]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -180.0
margin_right = 715.0
rect_pivot_offset = Vector2( 361.256, 213.557 )

[node name="RescueCount" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RescueCountLabel" type="Label" parent="RescueCount"]
margin_left = -258.0
margin_top = 238.918
margin_right = -2.0
margin_bottom = 284.918
size_flags_horizontal = 3
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "0/3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
